12-23 security complete